base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
    kargo.akuity.io/project: "true"
  name: kargo-canary
