base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kargo-canary
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: kargo-canary
