base/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kargo-canary
spec:
  selector:
    app: istio-ingress
  servers:
    - hosts:
        - kargo-canary.demo.akuity.io
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
    - hosts:
        - kargo-canary.demo.akuity.io
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: demo.akuity.io-tls
        mode: SIMPLE
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kargo-canary
spec:
  gateways:
  - kargo-canary
  hosts:
  - kargo-canary
  - kargo-canary.demo.akuity.io
  http:
  - name: primary
    route:
    - destination:
        host: kargo-canary
        subset: 05pct
      weight: 5
    - destination:
        host: kargo-canary
        subset: 20pct
      weight: 20
    - destination:
        host: kargo-canary
        subset: 75pct
      weight: 75

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kargo-canary
spec:
  host: kargo-canary
  subsets:
  - name: 05pct
    labels:
      canary: 05pct
  - name: 20pct
    labels:
      canary: 20pct
  - name: 75pct
    labels:
      canary: 75pct
